feat(update-vehicle): added a new resource to update a vehicle
